# code-proxy

./: .gitignore
Trace32-MCP/: .gitignore  LICENSE  README.md  pyproject.toml
Trace32-MCP/docs/: WINDOWS.md
Trace32-MCP/src/trace32_mcp/: __init__.py  config.py  server.py  session.py  t32_bridge.py  t32_client.py  t32_fake.py  t32_process.py
Trace32-MCP/src/trace32_mcp/manuals/: __init__.py  config.py  download.py  embed.py  search.py  store.py
Trace32-MCP/src/trace32_mcp/manuals_build/: __init__.py  cli.py  config.py  ingest.py  manifest.py  ocr.py  parallel.py  shards.py
Trace32-MCP/src/trace32_mcp/tools/: __init__.py  _common.py  control.py  docs.py  extra.py  healthcheck.py  inspect.py  instances.py  program.py  script.py  session.py  symbols.py
Trace32-MCP/tests/: conftest.py  test_fake_e2e.py  test_live_oneshot.py  test_live_pre_go.py  test_server_smoke.py
chatbot/: README.md
docs/: README.md  architecture.md  log-naming.md  system.md
docs/poc/: 01-overview.md  02-architecture.md  03-tech-stack.md  04-folder-structure.md  05-implementation.md  06-deployment.md  07-plan-and-decisions.md  08-wsl-windows-setup.md  09-backfill-existing-logs.md  10-interlude-only-pivot.md
docs/setup/: airgapped-deployment.md  work-laptop-setup.md
docs/system/: 01-srs.md  02-architecture.md  03-tech-stack.md  04-folder-structure.md  05-data-model.md  06-parser-framework.md  07-implementation.md  08-deployment.md  09-storage-strategy.md  10-observability.md
uta-analytics/: .env  .env.example  README.md  WSL_SETUP.md  docker-compose.yml
uta-analytics/vector/: .env  (+3 more)
(+96 files in other folders)
